--- a/HomePage.html
+++ b/HomePage.html
@@ -5,7 +5,7 @@
 	<meta name="viewport"
 	content="width=device-width,
 	initial-scale=1.0">
-	<title>CHRISTMAS</title>
+	<title>Cutie Hacks 2021 Project</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="script.js" defer></script>
 </head>
@@ -13,7 +13,7 @@
 
 
 <h3>Created by Erwin Madjus</h3>
-<h3>Last Edited December 15, 2021</h3>
+<h3>Last Edited November 6, 2021</h3>
 
 	<p></p>
 	<p></p>
@@ -22,7 +22,7 @@
 	<p></p>
 	<p></p>
 
-	<h1>When's Christmas? v1</h1>
+	<h1>Diner Grand Opening!</h1>
 
 	<div class="timer-container">
 		<div class="countdown-element days-c">
