--- a/HomePage.html
+++ b/HomePage.html
@@ -6,8 +6,8 @@
 	content="width=device-width,
 	initial-scale=1.0">
 	<title>Cutie Hacks 2021 Project</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="script.js" defer></script>
+	<link rel="stylesheet" href="Design.css">
+	<script src="functions.js" defer></script>
 </head>
 <body>
 
@@ -15,12 +15,7 @@
 <h3>Created by Erwin Madjus</h3>
 <h3>Last Edited November 6, 2021</h3>
 
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
-	<p></p>
+
 
 	<h1>Diner Grand Opening!</h1>
 
