Edited the Web Application
1. Created a "Contact Me Page" which contains links to my Online Portfolio, LinkedIn Page, and GitHub Profile
2. Added more JavaScript files which allows me to create a more functional website. (More countdowns for different holidays)
3. Added a simple Home Page
4. The background images used were found from Unsplash.com

--- a/christmas.html
+++ b/christmas.html
@@ -5,13 +5,13 @@
     <meta name = "viewport"
     content = "width = device 
     - width, initial - scale = 1.0">
-    <title>Cutie Hacks 2021 Project</title>
+    <title>Holiday Countdown Hub - Christmas</title>
     <link rel = "stylesheet" href = "design.css">
-    <script src = "script.js" defer></script>
+    <script src = "christmasScript.js" defer></script>
     <style>
         /* Basic styling for a header */
         header {
-            background-color: #4CAF50;
+            background-color: #7D7979;
             color: white;
             padding: 10px 20px;
             text-align: center;
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body>
+<body class = "christmas">
 
 <header> 
     <nav>
@@ -37,11 +37,7 @@
     </nav>
 </header>
 
-    <h3>Developed by Erwin Madjus</h3>
-    <h3>Last Edited August 26, 2024</h3>
-
-
-    <h1>Is it Christmas Yet?</h1>
+    <h1>Is It Christmas Yet?</h1>
 
     <div class = "timer-block">
         <div class = "time-element days-item">
