--- a/contactMe.html
+++ b/contactMe.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width = device - width, initial - scale = 1.0">
-    <title>Countdowns to the Holidays (2024)</title>
+    <title>Holiday Countdown Hub - Contact Me</title>
     <link rel = "stylesheet" href = "design.css">
     <script src = "script.js" defer></script>
     <style>
         /* Basic styling for a header */
         header {
-            background-color: #4CAF50;
+            background-color: #7D7979;
             color: white;
             padding: 10px 20px;
             text-align: center;
@@ -25,7 +25,7 @@
     </style>
 </head>
 
-<body>
+<body class  = "contact">
 <header> 
     <nav>
         <a href = "home.html">Home</a>
@@ -35,5 +35,11 @@
     </nav>
 </header>
 </body>
+
+<h2>Contact Me Page</h2>
+
+<a href = "https://www.linkedin.com/in/erwin-madjus-3a9074219/">LinkedIn Profile</a>
+<a href = "https://erwinmadjus.github.io/erwinmadjus.com/index.html">Personal Website</a>
+<a href = "https://github.com/erwinmadjus">GitHub Profile</a>
 
 </html>
