--- a/home.html
+++ b/home.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width = device - width, initial - scale = 1.0">
-    <title>Countdowns to the Holidays (2024)</title>
+    <title>Holiday Countdown Hub - Home</title>
     <link rel = "stylesheet" href = "design.css">
     <script src = "script.js" defer></script>
     <style>
         /* Basic styling for a header */
         header {
-            background-color: #4CAF50;
+            background-color: #7D7979;
             color: white;
             padding: 10px 20px;
             text-align: center;
@@ -25,16 +25,19 @@
     </style>
 </head>
 
-<body>
+<body class = "home">
 <header> 
     <nav>
         <a href = "home.html">Home</a>
         <a href = "halloween.html">Halloween</a>
         <a href = "thanksgiving.html">Thanksgiving</a>
         <a href = "christmas.html">Christmas</a>
-        <a href = "#contact">Contact Me</a>
+        <a href = "contactMe.html">Contact Me</a>
     </nav>
 </header>
+
+<h2>Holiday Countdown Hub</h2>
+
 </body>
 
 </html>
