Update and rename home.html to index.html
Changed home.html to index.html and changed the links on the header of the website

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body class = "home">
 <header> 
     <nav>
-        <a href = "home.html">Home</a>
+        <a href = "index.html">Home</a>
         <a href = "halloween.html">Halloween</a>
         <a href = "thanksgiving.html">Thanksgiving</a>
         <a href = "christmas.html">Christmas</a>
