Fixed Header on Halloween Page

--- a/halloween.html
+++ b/halloween.html
@@ -28,7 +28,7 @@
 <body class = "halloween">
 <header> 
     <nav>
-        <a href = "home.html">Home</a>
+        <a href = "index.html">Home</a>
         <a href = "thanksgiving.html">Thanksgiving</a>
         <a href = "christmas.html">Christmas</a>
         <a href = "contactMe.html">Contact Me</a>
