Fixed Header on Christmas Page

--- a/christmas.html
+++ b/christmas.html
@@ -30,7 +30,7 @@
 
 <header> 
     <nav>
-        <a href = "home.html">Home</a>
+        <a href = "index.html">Home</a>
         <a href = "halloween.html">Halloween</a>
         <a href = "thanksgiving.html">Thanksgiving</a>
         <a href = "contactMe.html">Contact Me</a>
