Fixed Header on Thanksgiving Page

--- a/thanksgiving.html
+++ b/thanksgiving.html
@@ -28,7 +28,7 @@
 <body class = "thanksgiving">
 <header> 
     <nav>
-        <a href = "home.html">Home</a>
+        <a href = "index.html">Home</a>
         <a href = "halloween.html">Halloween</a>
         <a href = "christmas.html">Christmas</a>
         <a href = "contactMe.html">Contact Me</a>
